src/test/deca/context/extension/valid/TAB_access_index.deca
{
    int x = 0;
    int y = 5;
    float[] a = new float[5];
    float[][] b = new float[5][6];

    a[x];
    b[x][y];
    a[x] = x;
    a[x] = b[x][6];
    b[x] = a;
}