src/test/deca/context/extension/invalid/TAB_match_dim2.deca
{
    int[] a = new int [1][2];
}